# 8bit-buddy

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: architecture.md  hardware.md  hooks.md
examples/: config.toml
src/eightbit_buddy/: __init__.py  adapters.py  attention.py  cli.py  client.py  config.py  display.py  installer.py  model.py  naming.py  server.py  store.py
tests/: test_adapters.py  test_attention.py  test_config.py  test_display.py  test_installer.py  test_server.py  test_store.py
